2002-04-17  Dietmar Maurer  <dietmar@ximian.com>

	* x86.brg: optimized version of castclass and isinst

Wed Apr 17 12:34:56 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* emit-x86.c, invoke.c: track time spent compiling.

Wed Apr 17 10:58:37 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* emit-x86.c, invoke.c: call profile callbacks if needed.
	* jit.c, jit.h, mono.c: add --profile command line option.

2002-04-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* jit.h: included mono/io-layer/io-layer.h to avoid breaking
	compilation under windows when upgrading mingw and w32api to 
	version	1.3 (thanks Dick!).

2002-04-15  Patrik Torstensson <patrik.torstensson@labs2.com>

	* jit.c: changed the array icalls to use full names

2002-04-15  Dietmar Maurer  <dietmar@ximian.com>

	* x86.brg: check the this pointer before calling
	non-virtual functions

	* emit-x86.c (arch_emit_prologue): initialize local vars.

	* x86.brg: removed incredible clumsy code

2002-04-13  Martin Baulig  <martin@gnome.org>

	* debug-dwarf2.c (dwarf2_write_variable_location): New static func to write
	the location of a variable.
	(dwarf2_write_variable, dwarf2_write_parameter): Take a MonoDebugVarInfo
	instead of a stack offset and use dwarf2_write_variable_location() to write
	the location.

2002-04-13  Martin Baulig  <martin@gnome.org>

	* debug.c, debug-stabs.c, debug-dwarf2.c: Reflect latest debug-symfile.h
	API changes.

2002-04-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Makefile.am: use of the new '-s' option in monoburg.

2002-04-12  Martin Baulig  <martin@gnome.org>

	* debug-dwarf2.c (dwarf2_write_variable): Emit info about the variable's
	lifetime.

2002-04-10  Sergey Chaban <serge@wildwestsoftware.com>
	* win32-exception: added Win32 SEH exception filter that translates
	CONTEXT to sigcontext;

	* jit.c: added Win32 SEH init/reset calls, compute sigcontext address
	in a platfrom-dependent way;

	* jit.h: use win32-exception instead of signal if PLATFORM_WIN32