@@ -1,3 +1,7 @@
+2002-04-18  Dietmar Maurer  <dietmar@ximian.com>
+
+	* jit.c (check_inlining): added inlining support
+
 2002-04-17  Dietmar Maurer  <dietmar@ximian.com>
 
 	* x86.brg: optimized version of castclass and isinst
